--- a/src/layouts/components/AuthorCard.astro
+++ b/src/layouts/components/AuthorCard.astro
@@ -13,7 +13,7 @@ const { title, image, social } = data.data;
       <ImageMod
         class="mx-auto mb-6 rounded"
         src={image}
-        alt={title}
+        alt={`Foto de ${title}`}
         width={120}
         height={120}
         format="webp"
