--- a/src/layouts/partials/CallToAction.astro
+++ b/src/layouts/partials/CallToAction.astro
@@ -16,8 +16,11 @@ const { call_to_action } = Astro.props;
                 src={call_to_action.data.image}
                 width={392}
                 height={390}
-                alt="cta-image"
+                alt={
+                  call_to_action.data.title || "Imagen de llamada a la acción"
+                }
                 format="webp"
+                loading="lazy"
               />
             </div>
             <div class="md:col-7 md:order-1">
