--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,8 +70,9 @@ const { banner, features } = homepage.data as Homepage;
                 src={banner.image}
                 height={380}
                 width={1200}
-                alt="banner"
+                alt={banner.title || "Banner principal de Mercado Regional"}
                 format="webp"
+                aboveTheFold={true}
               />
             </div>
           )
@@ -94,8 +95,9 @@ const { banner, features } = homepage.data as Homepage;
                 src={feature.image}
                 height={480}
                 width={520}
-                alt={feature.title}
+                alt={`Ilustración de ${feature.title}`}
                 format="webp"
+                loading="lazy"
               />
             </div>
             <div class={`md:col-7 lg:col-6 ${index % 2 !== 0 && "md:order-1"}`}>
