--- a/src/layouts/components/TwSizeIndicator.astro
+++ b/src/layouts/components/TwSizeIndicator.astro
@@ -4,7 +4,7 @@
 
 {
   process.env.NODE_ENV === "development" && (
-    <div class="fixed left-2 top-2 z-50 flex w-auto items-center justify-center bg-gray-200 py-[2.5px] text-[12px] uppercase text-black sm:bg-red-200 md:bg-yellow-200 lg:bg-green-200 xl:bg-blue-200 2xl:bg-pink-200">
+    <div class="fixed left-2 top-2 z-50 flex w-auto items-center justify-center bg-gray-200 p-1 text-[12px] text-black sm:bg-red-200 md:bg-yellow-200 lg:bg-green-200 xl:bg-blue-200 2xl:bg-pink-200">
       <span class="block sm:hidden">Móvil</span>
       <span class="hidden sm:block md:hidden">Móvil</span>
       <span class="hidden md:block lg:hidden">Tablet</span>
