--- a/src/layouts/partials/CallToAction.astro
+++ b/src/layouts/partials/CallToAction.astro
@@ -10,18 +10,20 @@ const { call_to_action } = Astro.props;
       <div class="container">
         <div class="rounded-xl bg-light px-4 py-16 dark:bg-darkmode-light xl:p-20">
           <div class="row items-center justify-between">
-            <div class="mb-10 md:col-5 lg:col-4 md:order-2 md:mb-0">
-              <ImageMod
-                class="w-full"
-                src={call_to_action.data.image}
-                width={392}
-                height={390}
-                alt={
-                  call_to_action.data.title || "Imagen de llamada a la acción"
-                }
-                format="webp"
-                loading="lazy"
-              />
+            <div class="mb-10 md:col-5 lg:col-4 md:order-2 md:mb-0 flex justify-center items-center">
+              <div class="rounded-2xl overflow-hidden flex items-center justify-center bg-white dark:bg-darkmode-light">
+                <ImageMod
+                  class="object-cover w-full h-full"
+                  src={call_to_action.data.image}
+                  width={400}
+                  height={400}
+                  alt={
+                    call_to_action.data.title || "Imagen de llamada a la acción"
+                  }
+                  format="webp"
+                  loading="lazy"
+                />
+              </div>
             </div>
             <div class="md:col-7 md:order-1">
               <h2
