:fire: REMOVE: Unused code

--- a/src/layouts/components/Brands.astro
+++ b/src/layouts/components/Brands.astro
@@ -15,6 +15,7 @@ const {
 const brands: string[] = [
   "CajetaDelDesierto",
   "Cimarron",
+  "CumbritaDeLaSierra",
   "Delisana",
   "Juwie",
   "Nectar",
