--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -7,14 +7,15 @@ import Footer from "@/partials/Footer.astro";
 import Header from "@/partials/Header.astro";
 import "@/styles/main.css";
 import {
-  GoogleTagmanager,
-  GoogleTagmanagerNoscript,
+GoogleTagmanager,
+GoogleTagmanagerNoscript,
 } from "@digi4care/astro-google-tagmanager";
 import { ClientRouter } from "astro:transitions";
 
 // font families
 const pf = theme.fonts.font_family.primary;
 const sf = theme.fonts.font_family.secondary;
+const rye = "Rye";
 
 let fontPrimary, fontSecondary;
 if (theme.fonts.font_family.primary) {
@@ -87,6 +88,11 @@ const { title, meta_title, description, image, noindex, canonical } =
         />
       )
     }
+    <!-- Fuente Rye para el banner -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rye&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- CSS variables para las fuentes -->
     <style
@@ -94,6 +100,7 @@ const { title, meta_title, description, image, noindex, canonical } =
       define:vars={{
         "font-primary": fontPrimary,
         "font-secondary": fontSecondary,
+  "font-rye": rye,
       }}
     >
       /* Define las variables CSS para las fuentes */
