:sparkles: ADDED: New banner section

--- a/src/layouts/components/BannerGradient.astro
+++ b/src/layouts/components/BannerGradient.astro
@@ -18,7 +18,7 @@ const {
 } = Astro.props as Props;
 ---
 <section class="w-full relative pt-14">
-  <div class="w-full relative overflow-hidden aspect-[4/3] md:aspect-[1200/380]">
+  <div class="w-full relative overflow-hidden aspect-[4/3] md:aspect-[1200/380] rounded-xl">
     <ImageMod
       src={src}
       width={width}
