:bulb:TRANSLATED: English comments

--- a/src/layouts/components/Brands.astro
+++ b/src/layouts/components/Brands.astro
@@ -11,7 +11,7 @@ const {
   subtitle = "Nuestras marcas con las que compartimos misón y visión",
 }: Props = Astro.props;
 
-// Nombres de archivo (sin .svg) en /src/icons/brands
+// Brand filenames (without .svg) in /src/icons/brands
 const brands: string[] = [
   "CajetaDelDesierto",
   "Cimarron",
