:recycle: REFACTORING: Pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,16 +65,18 @@ const { banner, features } = homepage.data as Homepage;
             )
           }
         </div>
-        {banner.image && (
-          <div class="col-12">
-            <BannerGradient
-              src={banner.image}
-              height={380}
-              width={1200}
-              alt={banner.title || "Banner principal de Mercado Regional"}
-            />
-          </div>
-        )}
+        {
+          banner.image && (
+            <div class="col-12">
+              <BannerGradient
+                src={banner.image}
+                height={380}
+                width={1200}
+                alt={banner.title || "Banner principal de Mercado Regional"}
+              />
+            </div>
+          )
+        }
       </div>
     </div>
   </section>
